tests/fixtures/invalid/pow_bool_none_float.py
# Cannot call pow() with Bool, None, Float
x = pow(True, None, 1.0)
